// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCourseRunPage renders html correctly 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    Create Course Run
  </HelmetWrapper>
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={
          {
            "data": {
              "actions": {
                "POST": {
                  "additional_metadata": {
                    "children": {
                      "external_course_marketing_type": {
                        "choices": [
                          {
                            "display_name": "Short Course",
                            "value": "short_course",
                          },
                          {
                            "display_name": "Sprint",
                            "value": "sprint",
                          },
                        ],
                      },
                      "product_status": {
                        "choices": [
                          {
                            "display_name": "Published",
                            "value": "published",
                          },
                          {
                            "display_name": "Archived",
                            "value": "archived",
                          },
                        ],
                      },
                    },
                  },
                  "level_type": {
                    "choices": [
                      {
                        "display_name": "Beginner",
                        "value": "beginner",
                      },
                      {
                        "display_name": "Intermediate",
                        "value": "intermediate",
                      },
                      {
                        "display_name": "Advanced",
                        "value": "advanced",
                      },
                    ],
                  },
                  "location_restriction": {
                    "children": {
                      "countries": {
                        "child": {
                          "choices": [
                            {
                              "label": "Afghanistan",
                              "value": "AF",
                            },
                            {
                              "label": "Åland Islands",
                              "value": "AX",
                            },
                            {
                              "label": "Algeria",
                              "value": "DZ",
                            },
                            {
                              "label": "American Samoa",
                              "value": "AS",
                            },
                            {
                              "label": "Andorra",
                              "value": "AD",
                            },
                          ],
                        },
                      },
                      "restriction_type": {
                        "choices": [
                          "blocklist",
                          "allowlist",
                        ],
                      },
                      "states": {
                        "child": {
                          "choices": [
                            {
                              "label": "Alabama",
                              "value": "AL",
                            },
                            {
                              "label": "Arizona",
                              "value": "AZ",
                            },
                            {
                              "label": "Arkansas",
                              "value": "AR",
                            },
                            {
                              "label": "California",
                              "value": "CA",
                            },
                            {
                              "label": "Colorado",
                              "value": "CO",
                            },
                          ],
                        },
                      },
                    },
                  },
                  "subjects": {
                    "child": {
                      "choices": [
                        {
                          "display_name": "Business",
                          "value": "business",
                        },
                        {
                          "display_name": "Chemistry",
                          "value": "chemistry",
                        },
                        {
                          "display_name": "English",
                          "value": "english",
                        },
                        {
                          "display_name": "Security",
                          "value": "security",
                        },
                      ],
                    },
                  },
                  "type": {
                    "type_options": [
                      {
                        "course_run_types": [
                          {
                            "is_marketable": true,
                            "modes": [
                              "credit",
                              "verified",
                              "audit",
                            ],
                            "name": "Credit",
                            "uuid": "f17e29d6-4648-4bb5-a199-97dc40f904aa",
                          },
                          {
                            "is_marketable": true,
                            "modes": [
                              "verified",
                              "audit",
                            ],
                            "name": "Verified and Audit",
                            "uuid": "4e260c57-24ef-46c1-9a0d-5ec3a30f6b0c",
                          },
                          {
                            "is_marketable": true,
                            "modes": [
                              "audit",
                            ],
                            "name": "Audit Only",
                            "uuid": "cfacfc62-54bd-4e1b-939a-5a94f12fbd8d",
                          },
                        ],
                        "entitlement_types": [
                          "verified",
                        ],
                        "name": "Credit",
                        "tracks": [
                          {
                            "mode": {
                              "certificate_type": "credit",
                              "is_credit_eligible": true,
                              "is_id_verified": true,
                              "name": "Credit",
                              "payee": "platform",
                              "slug": "credit",
                            },
                            "seat_type": {
                              "name": "Credit",
                              "slug": "credit",
                            },
                          },
                          {
                            "mode": {
                              "certificate_type": "verified",
                              "is_credit_eligible": false,
                              "is_id_verified": true,
                              "name": "Verified",
                              "payee": "platform",
                              "slug": "verified",
                            },
                            "seat_type": {
                              "name": "Verified",
                              "slug": "verified",
                            },
                          },
                          {
                            "mode": {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Audit",
                              "payee": "",
                              "slug": "audit",
                            },
                            "seat_type": {
                              "name": "Audit",
                              "slug": "audit",
                            },
                          },
                        ],
                        "uuid": "9521aa7d-801b-4a67-92c3-716ea30f5086",
                      },
                      {
                        "course_run_types": [
                          {
                            "is_marketable": false,
                            "modes": [
                              "masters",
                            ],
                            "name": "Masters Only",
                            "uuid": "f394732f-ba43-4260-8ada-06a9f18e7160",
                          },
                        ],
                        "entitlement_types": [],
                        "name": "Masters Only",
                        "tracks": [
                          {
                            "mode": {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Masters",
                              "payee": "organization",
                              "slug": "masters",
                            },
                            "seat_type": null,
                          },
                        ],
                        "uuid": "7b41992e-f268-4331-8ba9-72acb0880454",
                      },
                      {
                        "course_run_types": [
                          {
                            "is_marketable": true,
                            "modes": [
                              "verified",
                              "audit",
                            ],
                            "name": "Verified and Audit",
                            "uuid": "4e260c57-24ef-46c1-9a0d-5ec3a30f6b0c",
                          },
                          {
                            "is_marketable": true,
                            "modes": [
                              "audit",
                            ],
                            "name": "Audit Only",
                            "uuid": "cfacfc62-54bd-4e1b-939a-5a94f12fbd8d",
                          },
                        ],
                        "entitlement_types": [
                          "verified",
                        ],
                        "name": "Verified and Audit",
                        "tracks": [
                          {
                            "mode": {
                              "certificate_type": "verified",
                              "is_credit_eligible": false,
                              "is_id_verified": true,
                              "name": "Verified",
                              "payee": "platform",
                              "slug": "verified",
                            },
                            "seat_type": {
                              "name": "Verified",
                              "slug": "verified",
                            },
                          },
                          {
                            "mode": {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Audit",
                              "payee": "",
                              "slug": "audit",
                            },
                            "seat_type": {
                              "name": "Audit",
                              "slug": "audit",
                            },
                          },
                        ],
                        "uuid": "8a8f30e1-23ce-4ed3-a361-1325c656b67b",
                      },
                      {
                        "course_run_types": [
                          {
                            "is_marketable": true,
                            "modes": [
                              "professional",
                            ],
                            "name": "Professional Only",
                            "uuid": "6cebfc50-abca-4674-b4c7-249b31af6ddb",
                          },
                        ],
                        "entitlement_types": [
                          "professional",
                        ],
                        "name": "Professional Only",
                        "tracks": [
                          {
                            "mode": {
                              "certificate_type": "professional",
                              "is_credit_eligible": false,
                              "is_id_verified": true,
                              "name": "Professional",
                              "payee": "platform",
                              "slug": "professional",
                            },
                            "seat_type": {
                              "name": "Professional",
                              "slug": "professional",
                            },
                          },
                        ],
                        "uuid": "fdde7d04-7ce0-4ff7-ac90-7f518e90ac1e",
                      },
                      {
                        "course_run_types": [
                          {
                            "is_marketable": true,
                            "modes": [
                              "audit",
                            ],
                            "name": "Audit Only",
                            "uuid": "cfacfc62-54bd-4e1b-939a-5a94f12fbd8d",
                          },
                        ],
                        "entitlement_types": [
                          "audit",
                        ],
                        "name": "Audit Only",
                        "tracks": [
                          {
                            "mode": {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Audit",
                              "payee": "",
                              "slug": "audit",
                            },
                            "seat_type": {
                              "name": "Audit",
                              "slug": "audit",
                            },
                          },
                        ],
                        "uuid": "03e09c15-4127-4031-bc02-e20fcbdf09f0",
                      },
                    ],
                  },
                },
              },
            },
            "error": null,
            "isFetching": false,
          }
        }
        courseRunLabels={[]}
        courseRunOptions={{}}
        currentFormValues={{}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-run-form"
        getFormState={[Function]}
        initialValues={
          {
            "pacing_type": undefined,
            "rerun": "",
            "run_type": undefined,
          }
        }
        isCreating={false}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        submitAsSideEffect={false}
        title=""
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
        uuid=""
      />
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCourseRunPage renders html correctly when creating 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    Create Course Run
  </HelmetWrapper>
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={{}}
        courseRunLabels={[]}
        courseRunOptions={{}}
        courseRunTypeOptions={[]}
        currentFormValues={{}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-run-form"
        getFormState={[Function]}
        initialValues={
          {
            "pacing_type": undefined,
            "rerun": "",
            "run_type": undefined,
          }
        }
        isCreating={true}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        submitAsSideEffect={false}
        title=""
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
        uuid=""
      />
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCourseRunPage renders html correctly when error 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    Create Course Run
  </HelmetWrapper>
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={{}}
        courseRunLabels={[]}
        courseRunOptions={{}}
        courseRunTypeOptions={[]}
        currentFormValues={{}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-run-form"
        getFormState={[Function]}
        initialValues={
          {
            "pacing_type": undefined,
            "rerun": "",
            "run_type": undefined,
          }
        }
        isCreating={false}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        submitAsSideEffect={false}
        title=""
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
        uuid=""
      />
      <ForwardRef
        className="mt-3"
        dismissible={false}
        id="create-error"
        onClose={[Function]}
        show={true}
        stacked={false}
        transition={
          {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": {
              "appear": false,
              "in": false,
              "mountOnEnter": false,
              "timeout": 300,
              "unmountOnExit": false,
            },
            "render": [Function],
          }
        }
        variant="danger"
      >
        failed
        <br />
      </ForwardRef>
    </div>
  </PageContainer>
</Fragment>
`;

exports[`CreateCourseRunPage renders html correctly when fetching 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    Create Course Run
  </HelmetWrapper>
  <PageContainer
    className=""
    wide={false}
  >
    <LoadingSpinner
      message="Loading…"
    />
  </PageContainer>
</Fragment>
`;

exports[`CreateCourseRunPage renders html correctly with Course Type 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    Create Course Run
  </HelmetWrapper>
  <PageContainer
    className=""
    wide={false}
  >
    <div>
      <ReduxForm
        courseOptions={
          {
            "data": {
              "actions": {
                "POST": {
                  "additional_metadata": {
                    "children": {
                      "external_course_marketing_type": {
                        "choices": [
                          {
                            "display_name": "Short Course",
                            "value": "short_course",
                          },
                          {
                            "display_name": "Sprint",
                            "value": "sprint",
                          },
                        ],
                      },
                      "product_status": {
                        "choices": [
                          {
                            "display_name": "Published",
                            "value": "published",
                          },
                          {
                            "display_name": "Archived",
                            "value": "archived",
                          },
                        ],
                      },
                    },
                  },
                  "level_type": {
                    "choices": [
                      {
                        "display_name": "Beginner",
                        "value": "beginner",
                      },
                      {
                        "display_name": "Intermediate",
                        "value": "intermediate",
                      },
                      {
                        "display_name": "Advanced",
                        "value": "advanced",
                      },
                    ],
                  },
                  "location_restriction": {
                    "children": {
                      "countries": {
                        "child": {
                          "choices": [
                            {
                              "label": "Afghanistan",
                              "value": "AF",
                            },
                            {
                              "label": "Åland Islands",
                              "value": "AX",
                            },
                            {
                              "label": "Algeria",
                              "value": "DZ",
                            },
                            {
                              "label": "American Samoa",
                              "value": "AS",
                            },
                            {
                              "label": "Andorra",
                              "value": "AD",
                            },
                          ],
                        },
                      },
                      "restriction_type": {
                        "choices": [
                          "blocklist",
                          "allowlist",
                        ],
                      },
                      "states": {
                        "child": {
                          "choices": [
                            {
                              "label": "Alabama",
                              "value": "AL",
                            },
                            {
                              "label": "Arizona",
                              "value": "AZ",
                            },
                            {
                              "label": "Arkansas",
                              "value": "AR",
                            },
                            {
                              "label": "California",
                              "value": "CA",
                            },
                            {
                              "label": "Colorado",
                              "value": "CO",
                            },
                          ],
                        },
                      },
                    },
                  },
                  "subjects": {
                    "child": {
                      "choices": [
                        {
                          "display_name": "Business",
                          "value": "business",
                        },
                        {
                          "display_name": "Chemistry",
                          "value": "chemistry",
                        },
                        {
                          "display_name": "English",
                          "value": "english",
                        },
                        {
                          "display_name": "Security",
                          "value": "security",
                        },
                      ],
                    },
                  },
                  "type": {
                    "type_options": [
                      {
                        "course_run_types": [
                          {
                            "is_marketable": true,
                            "modes": [
                              "credit",
                              "verified",
                              "audit",
                            ],
                            "name": "Credit",
                            "uuid": "f17e29d6-4648-4bb5-a199-97dc40f904aa",
                          },
                          {
                            "is_marketable": true,
                            "modes": [
                              "verified",
                              "audit",
                            ],
                            "name": "Verified and Audit",
                            "uuid": "4e260c57-24ef-46c1-9a0d-5ec3a30f6b0c",
                          },
                          {
                            "is_marketable": true,
                            "modes": [
                              "audit",
                            ],
                            "name": "Audit Only",
                            "uuid": "cfacfc62-54bd-4e1b-939a-5a94f12fbd8d",
                          },
                        ],
                        "entitlement_types": [
                          "verified",
                        ],
                        "name": "Credit",
                        "tracks": [
                          {
                            "mode": {
                              "certificate_type": "credit",
                              "is_credit_eligible": true,
                              "is_id_verified": true,
                              "name": "Credit",
                              "payee": "platform",
                              "slug": "credit",
                            },
                            "seat_type": {
                              "name": "Credit",
                              "slug": "credit",
                            },
                          },
                          {
                            "mode": {
                              "certificate_type": "verified",
                              "is_credit_eligible": false,
                              "is_id_verified": true,
                              "name": "Verified",
                              "payee": "platform",
                              "slug": "verified",
                            },
                            "seat_type": {
                              "name": "Verified",
                              "slug": "verified",
                            },
                          },
                          {
                            "mode": {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Audit",
                              "payee": "",
                              "slug": "audit",
                            },
                            "seat_type": {
                              "name": "Audit",
                              "slug": "audit",
                            },
                          },
                        ],
                        "uuid": "9521aa7d-801b-4a67-92c3-716ea30f5086",
                      },
                      {
                        "course_run_types": [
                          {
                            "is_marketable": false,
                            "modes": [
                              "masters",
                            ],
                            "name": "Masters Only",
                            "uuid": "f394732f-ba43-4260-8ada-06a9f18e7160",
                          },
                        ],
                        "entitlement_types": [],
                        "name": "Masters Only",
                        "tracks": [
                          {
                            "mode": {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Masters",
                              "payee": "organization",
                              "slug": "masters",
                            },
                            "seat_type": null,
                          },
                        ],
                        "uuid": "7b41992e-f268-4331-8ba9-72acb0880454",
                      },
                      {
                        "course_run_types": [
                          {
                            "is_marketable": true,
                            "modes": [
                              "verified",
                              "audit",
                            ],
                            "name": "Verified and Audit",
                            "uuid": "4e260c57-24ef-46c1-9a0d-5ec3a30f6b0c",
                          },
                          {
                            "is_marketable": true,
                            "modes": [
                              "audit",
                            ],
                            "name": "Audit Only",
                            "uuid": "cfacfc62-54bd-4e1b-939a-5a94f12fbd8d",
                          },
                        ],
                        "entitlement_types": [
                          "verified",
                        ],
                        "name": "Verified and Audit",
                        "tracks": [
                          {
                            "mode": {
                              "certificate_type": "verified",
                              "is_credit_eligible": false,
                              "is_id_verified": true,
                              "name": "Verified",
                              "payee": "platform",
                              "slug": "verified",
                            },
                            "seat_type": {
                              "name": "Verified",
                              "slug": "verified",
                            },
                          },
                          {
                            "mode": {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Audit",
                              "payee": "",
                              "slug": "audit",
                            },
                            "seat_type": {
                              "name": "Audit",
                              "slug": "audit",
                            },
                          },
                        ],
                        "uuid": "8a8f30e1-23ce-4ed3-a361-1325c656b67b",
                      },
                      {
                        "course_run_types": [
                          {
                            "is_marketable": true,
                            "modes": [
                              "professional",
                            ],
                            "name": "Professional Only",
                            "uuid": "6cebfc50-abca-4674-b4c7-249b31af6ddb",
                          },
                        ],
                        "entitlement_types": [
                          "professional",
                        ],
                        "name": "Professional Only",
                        "tracks": [
                          {
                            "mode": {
                              "certificate_type": "professional",
                              "is_credit_eligible": false,
                              "is_id_verified": true,
                              "name": "Professional",
                              "payee": "platform",
                              "slug": "professional",
                            },
                            "seat_type": {
                              "name": "Professional",
                              "slug": "professional",
                            },
                          },
                        ],
                        "uuid": "fdde7d04-7ce0-4ff7-ac90-7f518e90ac1e",
                      },
                      {
                        "course_run_types": [
                          {
                            "is_marketable": true,
                            "modes": [
                              "audit",
                            ],
                            "name": "Audit Only",
                            "uuid": "cfacfc62-54bd-4e1b-939a-5a94f12fbd8d",
                          },
                        ],
                        "entitlement_types": [
                          "audit",
                        ],
                        "name": "Audit Only",
                        "tracks": [
                          {
                            "mode": {
                              "certificate_type": "",
                              "is_credit_eligible": false,
                              "is_id_verified": false,
                              "name": "Audit",
                              "payee": "",
                              "slug": "audit",
                            },
                            "seat_type": {
                              "name": "Audit",
                              "slug": "audit",
                            },
                          },
                        ],
                        "uuid": "03e09c15-4127-4031-bc02-e20fcbdf09f0",
                      },
                    ],
                  },
                },
              },
            },
            "error": null,
            "isFetching": false,
          }
        }
        courseRunLabels={[]}
        courseRunOptions={{}}
        courseRunTypeOptions={
          [
            {
              "label": "Select enrollment track",
              "value": "",
            },
            {
              "label": "Verified and Audit",
              "value": "4e260c57-24ef-46c1-9a0d-5ec3a30f6b0c",
            },
            {
              "label": "Audit Only",
              "value": "cfacfc62-54bd-4e1b-939a-5a94f12fbd8d",
            },
          ]
        }
        courseTypeUuid="8a8f30e1-23ce-4ed3-a361-1325c656b67b"
        currentFormValues={{}}
        destroyOnUnmount={true}
        enableReinitialize={false}
        forceUnregisterOnUnmount={false}
        form="create-course-run-form"
        getFormState={[Function]}
        initialValues={
          {
            "pacing_type": undefined,
            "rerun": "",
            "run_type": "4e260c57-24ef-46c1-9a0d-5ec3a30f6b0c",
          }
        }
        isCreating={false}
        keepDirtyOnReinitialize={false}
        onSubmit={[Function]}
        persistentSubmitErrors={false}
        pure={true}
        shouldAsyncValidate={[Function]}
        shouldError={[Function]}
        shouldValidate={[Function]}
        shouldWarn={[Function]}
        submitAsSideEffect={false}
        title=""
        touchOnBlur={true}
        touchOnChange={false}
        updateUnregisteredFields={false}
        uuid=""
      />
    </div>
  </PageContainer>
</Fragment>
`;
